--- a/faq.tex
+++ b/faq.tex
@@ -14,28 +14,14 @@
 \textbf{Q:} Why isn't there a binary release for .....? \\
 \textbf{A:} I don't have a development environment for every operating system. Furthermore I don't think that binary releases make sense for Unix style operating systems. \\
 \\
-\textbf{Q:} What is the package db2-auth-routines for? \\
-\textbf{A:} This package contains User Defined Functions and Stored Procedures to encrypt and validate passwords within DB2. \\
+\textbf{Q:} What is the package db2-hash-routines for? \\
+\textbf{A:} This package contains User Defined Functions and Stored Procedures to generate and validate hashes in DB2. \\
 \\
 \textbf{Q:} How do I get support? \\
-\textbf{A:} Please submit support requests at the \href{http://sourceforge.net/tracker/?atid=633718&group_id=103064&func=browse}{Support Request Tracker} (hosted by sourceforge). \\
+\textbf{A:} Please submit support requests at the \href{http://sf.net/p/mod-auth-ibmdb2/support-requests}{Support Request Tracker} (hosted by sourceforge). \\
 \\
 \textbf{Q:} How do I submit bugs? \\
-\textbf{A:} Please submit bugs at the \href{http://sourceforge.net/tracker/?atid=633717&group_id=103064&func=browse}{Bug Tracker} (hosted by sourceforge). \\
+\textbf{A:} Please submit bugs at the \href{http://sf.net/p/mod-auth-ibmdb2/bugs}{Bug Tracker} (hosted by sourceforge). \\
 \\
 \textbf{Q:} How do I submit a feature request? \\
-\textbf{A:} Please submit feature requests at the \href{http://sourceforge.net/tracker/?atid=633720&group_id=103064&func=browse}{Feature Request Tracker} (hosted by sourceforge).
-\section{Links}
-\subsection{Official mod\_auth(nz)\_ibmdb2 website}
-\url{http://mod-auth-ibmdb2.sourceforge.net}
-\subsection{Support Requests}
-\url{http://sourceforge.net/tracker/?atid=633718&group_id=103064&func=browse}
-\subsection{Feature Requests}
-\url{http://sourceforge.net/tracker/?atid=633720&group_id=103064&func=browse}
-\subsection{Bugs}
-\url{http://sourceforge.net/tracker/?atid=633717&group_id=103064&func=browse}
-\subsection{Release / Update Announcement Mailing List}
-\url{http://lists.sourceforge.net/lists/subscribe/mod-auth-ibmdb2-announce}
-\subsection{developerWorks article}
-mod\_auth\_ibmdb2: A novel authentication method for Apache\\
-\url{http://www.ibm.com/developerworks/db2/library/techarticle/dm-0407tessarek/}
+\textbf{A:} Please submit feature requests at the \href{http://sf.net/p/mod-auth-ibmdb2/feature-requests}{Feature Request Tracker} (hosted by sourceforge).
