--- a/routines.tex
+++ b/routines.tex
@@ -1,4 +1,4 @@
-\section{db2-auth-routines}
+\section{db2-hash-routines}
 \subsection{Building the library and registering the UDFs and SPs}
 Login as the instance user. Change the {\tt DB2PATH} variable in the {\tt makertn} script for your environment.
 \begin{verbatim}
