--- a/mod_authnz_ibmdb2.tex
+++ b/mod_authnz_ibmdb2.tex
@@ -1,4 +1,3 @@
-% $Id$
 %\documentclass[11pt,a4paper]{scrartcl}
 %\documentclass[11pt,a4paper]{article}
 \documentclass[11pt,letterpaper]{article}
@@ -6,15 +5,16 @@
 \usepackage{array}
 \usepackage{verbatim}
 \newenvironment{sverbatim}{\begingroup\small\verbatim}{\endverbatim\endgroup}
-\newcommand{\stt}[1]{\tt \small #1}
 \usepackage{lastpage}
 \usepackage{fancyhdr}
+\usepackage[nodayofweek]{datetime}
+\input{dmod_authnz_ibmdb2_info}
 \usepackage[
   bookmarks=true, 
   bookmarksnumbered=true, 
   pdftitle={Documentation for mod auth(nz) ibmdb2}, 
   pdfauthor={Helmut K. C. Tessarek}, 
-  pdfcreator={$ $Id$ $}, 
+  pdfcreator={\CommitHash{}}, 
   colorlinks=false, 
   linkcolor={blue}, 
   citecolor={blue}, 
@@ -22,13 +22,21 @@
   breaklinks=true, 
   pdftex
 ]{hyperref}
-\date{\today}
+
+\newcommand{\stt}[1]{\tt \small #1}
+\newcommand{\showtext}[2]{
+\ifdata
+#1#2
+\fi
+}
+
+\begin{document}
 \author{Helmut K. C. Tessarek}
 \title{Documentation for\\
 mod\_auth(nz)\_ibmdb2\\
 db2-hash-routines\\
 scripts}
-\begin{document}
+\date{\longdate{\formatdate{\CommitD{}}{\CommitM{}}{\CommitY{}}}}
 \maketitle
 \setcounter{page}{0}
 \thispagestyle{empty}
@@ -41,9 +49,8 @@ mod\_auth(nz)\_ibmdb2 is an Apache authentication module using IBM\textsuperscri
 \begin{center}
 \href{http://mod-auth-ibmdb2.sourceforge.net}{http://mod-auth-ibmdb2.sourceforge.net}\\
 
-{\tiny \rm $ $RCSfile$ $ }
-{\tiny \rm $ $Date$ $ }
-{\tiny \rm $ $Revision$ $ }
+{\tiny \rm \showtext{Date: }\CommitDateTimeTz{} }
+{\tiny \rm \showtext{Id: }\CommitHashAbbrev{} }
 
 \end{center}
 \newpage
@@ -54,9 +61,9 @@ mod\_auth(nz)\_ibmdb2 is an Apache authentication module using IBM\textsuperscri
 \lhead{}
 \chead{Documentation for mod\_auth(nz)\_ibmdb2}
 \rhead{}
-\rfoot{{\tiny \rm $ $Revision$ $}}
+\lfoot{{\tiny \rm \showtext{Date: }\CommitDate{}}}
 \cfoot{\thepage\ / \pageref*{LastPage}}
-\lfoot{{\tiny \rm $ $Date$ $}}
+\rfoot{{\tiny \rm \showtext{Id: }\CommitHashAbbrev{}}}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
 \renewcommand{\thepage}{\arabic{page}}
@@ -485,9 +492,8 @@ END@
 
 \begin{center}
 \vspace{\fill}\ \newline
-{\tiny \rm $ $RCSfile$ $ }
-{\tiny \rm $ $Date$ $ }
-{\tiny \rm $ $Revision$ $ }
+{\tiny \rm \showtext{Date: }\CommitDateTimeTz{} }
+{\tiny \rm \showtext{Id: }\CommitHash{} }
 \end{center}
 
 \end{document}
