changed a FAQ entry

--- a/faq.tex
+++ b/faq.tex
@@ -3,7 +3,7 @@
 \textbf{A:} mod\_auth(nz)\_ibmdb2 has to be loaded after the Websphere plugin. \\
 \\
 \textbf{Q:} Which versions of DB2 are supported? \\
-\textbf{A:} All DB2 versions currently supported by IBM. I've tested the module with DB2 UDB v7.x, DB2 UDB v8.x, DB2 9.x, DB2 10. Older versions should work as well. \\
+\textbf{A:} All DB2 versions currently supported by IBM. I've tested the module with all versions since DB2 UDB v7.x, but older versions should work as well. \\
 \\
 \textbf{Q:} What is the difference between mod\_auth\_ibmdb2 and mod\_authnz\_ibmdb2? \\
 \textbf{A:} mod\_authnz\_ibmdb2 is based on the new authentication backend provider scheme of Apache 2.2. This module will only work for Apache 2.2 and later. \linebreak[4] mod\_auth\_ibmdb2 works for Apache 2.0.x and 1.x. \\
