added git repos to link section

--- a/links.tex
+++ b/links.tex
@@ -12,3 +12,7 @@
 \subsection{developerWorks article}
 mod\_auth\_ibmdb2: A novel authentication method for Apache\\
 \url{http://www.ibm.com/developerworks/db2/library/techarticle/dm-0407tessarek/}
+\subsection{GIT repositories}
+\url{https://github.com/tessus/mod_authnz_ibmdb2}\\
+\url{https://github.com/tessus/mod_auth_ibmdb2}\\
+\url{https://github.com/tessus/db2-hash-routines}\\
