--- a/routines.tex
+++ b/routines.tex
@@ -25,8 +25,9 @@ db2 -tvf register.ddl
 \end{verbatim}
 \newpage
 \subsection{Description of the UDFs and SPs}
-This library delivers five routines\footnote{see Appendix \ref{rtnreference} for a reference of the UDFs and SPs}:\\
+This library delivers the following routines\footnote{see Appendix \ref{rtnreference} for a reference of the UDFs and SPs}:\\
 \\
+\hyperlink{hbcrypt}{\tt bcrypt}\\
 \hyperlink{hphpmd5}{\tt php\_md5}\\
 \hyperlink{haprmd5}{\tt apr\_md5}\\
 \hyperlink{haprcrypt}{\tt apr\_crypt}\\
@@ -35,8 +36,8 @@ This library delivers five routines\footnote{see Appendix \ref{rtnreference} for
 \hyperlink{hvalidatepw}{\tt validate\_pw}\\
 \\
 The {\tt php\_md5} routine is compatible to the PHP md5 function.\\
-The {\tt apr\_md5}, {\tt apr\_crypt} and {\tt apr\_sha1} routines are compatible to the Apache functions that are used in the {\tt htpasswd} utility.\\
+The {\tt apr\_md5}, {\tt apr\_crypt}, {\tt apr\_sha1} and {\tt bcrypt} routines are compatible to the functions used in Apache's {\tt htpasswd} utility.\\
 The {\tt apr\_sha256} routine returns the identifier {\tt \{SHA256\}} plus the base64 encoded sha256 hash.\\
 \\
 {\tt validate\_pw} can be used to validate a password against a hash.
-\paragraph{Note:}{In win32 environments {\tt apr\_crypt} returns the output of {\tt apr\_md5}.}
+\paragraph{Note:}{In win32 environments {\tt apr\_crypt} returns the output of {\tt bcrypt}, if available. If {\tt bcrypt} is not available, the output of {\tt apr\_md5} is returned.}
