--- a/scripts.tex
+++ b/scripts.tex
@@ -6,7 +6,7 @@ The script {\tt sync\_pwds} is for syncing the system users with a table within 
 \\
 You have to change the settings in the {\tt config.php} file for your environment.\\
 \\
-Here is a table of the relation between the directives for the \emph{mod\_auth(nz)\_ibmdb2} module
+Here is a table of the relation between the directives for the \emph{mod\_authnz\_ibmdb2} module
 and the settings in the {\tt config.php} file:\\
 \\
 \begin{tabular}{@{} lll @{}}
